--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solid-standalone",
   "description": "A browser compatible Solid.js compiler for demos and sandboxes",
-  "version": "0.18.0",
+  "version": "0.18.12",
   "author": "Ryan Carniato",
   "license": "MIT",
   "repository": {
@@ -14,12 +14,12 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "hyper-dom-expressions": "0.18.0",
-    "lit-dom-expressions": "0.18.0",
-    "rollup": "2.1.0",
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
-    "rollup-plugin-terser": "5.3.0",
-    "solid-js": "~0.18.0"
+    "hyper-dom-expressions": "0.19.7",
+    "lit-dom-expressions": "0.19.7",
+    "rollup": "2.21.0",
+    "@rollup/plugin-commonjs": "^13.0.1",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "rollup-plugin-terser": "6.1.0",
+    "solid-js": "0.18.12"
   }
 }
