--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "solid-standalone",
-  "description": "A browser compatible Solid.js compiler for demos and sandboxes",
-  "version": "0.18.12",
+  "description": "A browser compatible Solid.js runtime for demos and sandboxes",
+  "version": "0.19.0",
   "author": "Ryan Carniato",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/ryansolid/solid-standalone"
   },
-  "main": "babel.js",
+  "main": "html.min.js",
   "scripts": {
     "build": "rollup -c",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "hyper-dom-expressions": "0.19.7",
-    "lit-dom-expressions": "0.19.7",
-    "rollup": "2.21.0",
-    "@rollup/plugin-commonjs": "^13.0.1",
-    "@rollup/plugin-node-resolve": "^8.4.0",
-    "rollup-plugin-terser": "6.1.0",
-    "solid-js": "0.18.12"
+    "hyper-dom-expressions": "0.20.0",
+    "lit-dom-expressions": "0.20.0",
+    "rollup": "2.26.5",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "rollup-plugin-terser": "7.0.0",
+    "solid-js": "0.19.0"
   }
 }
